src/test/deca/syntax/invalid/class_null.deca
// Description :
// 
//      Test incorrect d'une classe nommée null
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 19/06/2023 par gl03

class null {
    
}